# Projet_VR_CRX

./: CMakeLists.txt  README.md
PROJECT_CRX/: CMakeLists.txt
PROJECT_CRX/code/: brouillon.cpp  clean.cpp  colladainterface.cpp  main.cpp  main_Cyril_NEW.cpp  main_cyril_shadow.cpp  main_old.cpp  main_raph.cpp  proj_Cyril_part.cpp
PROJECT_CRX/headers/: camera.h  colladaanimation.h  colladainterface.h  colladaobject.h  collision.h  object.h  object_bumping.h  particle.h  shader.h  shader_copie.h  utils.h
PROJECT_CRX/objects/: Character_Running.dae  heart.dae  piece.mtl  rotation.dae  sphere_raph.dae  terre.mtl  testcube1.dae
PROJECT_CRX/source/: ComputeShader.txt  fragSrc.txt  fragSrcCubeMap.txt  fragSrcParticles.txt  fragSrc_Animation.txt  fragSrc_BumpMapping.txt  fragSrc_Nebuleuse.txt  fragSrc_Rocket.txt  fragSrc_Shadow.txt  geomSrc.txt  vertSrc.txt  vertSrcCubeMap.txt  vertSrc_Animation.txt  vertSrc_BumpMapping.txt  vertSrc_Nebuleuse.txt  vertSrc_Skinning.txt  vertSrc_SpaceShip.txt
